# tizen-hello-cmake

./: CMakeLists.txt  README.md
packaging/: hello.spec
