CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(hello C CXX)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(LTRACE REQUIRED ltrace)

INCLUDE_DIRECTORIES(
    ${LTRACE_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
    ${INSTALL_DIR}
)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++11")

ADD_EXECUTABLE(hello src/hello.cpp)
TARGET_LINK_LIBRARIES(hello
    ${LTRACE_LIBRARIES}
)
INSTALL(TARGETS hello DESTINATION bin)
